// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api sends information through renders info when API call succeeds 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <h1>
          Perusall API User Return:
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <h1>
        Perusall API User Return:
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Institution Data Page Tests page does api calls when page loaded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="align-items: center; flex-direction: column; display: flex;"
      >
        <div
          class="p-datatable p-component p-datatable-scrollable p-datatable-responsive-scroll"
          data-pc-name="datatable"
          data-pc-section="root"
          data-scrollselectors=".p-datatable-wrapper"
          data-showgridlines="false"
          data-testid="tableTest"
          pr_id_2=""
        >
          <div
            class="p-datatable-wrapper"
            data-pc-section="wrapper"
            style="overflow: auto;"
          >
            <table
              class="p-datatable-table p-datatable-scrollable-table"
              data-pc-section="table"
              role="table"
              style="min-width: 70rem; max-width: 100rem;"
            >
              <thead
                class="p-datatable-thead"
                data-pc-name="datatable"
                data-pc-section="thead"
                role="rowgroup"
              >
                <tr
                  data-pc-section="headerrow"
                  role="row"
                >
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 10%;"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Course
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          aria-hidden="true"
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <div
                        class="p-column-filter p-fluid p-column-filter-menu"
                        data-pc-section="columnfilter"
                      >
                        <button
                          aria-controls="pr_id_1"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-label="Show Filter Menu"
                          class="p-column-filter-menu-button p-link"
                          data-pc-section="filtermenubutton"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="p-icon"
                            data-pc-section="filtericon"
                            fill="none"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.64708 14H5.35296C5.18981 13.9979 5.03395 13.9321 4.91858 13.8167C4.8032 13.7014 4.73745 13.5455 4.73531 13.3824V7L0.329431 0.98C0.259794 0.889466 0.217389 0.780968 0.20718 0.667208C0.19697 0.553448 0.219379 0.439133 0.271783 0.337647C0.324282 0.236453 0.403423 0.151519 0.500663 0.0920138C0.597903 0.0325088 0.709548 0.000692754 0.823548 0H13.1765C13.2905 0.000692754 13.4021 0.0325088 13.4994 0.0920138C13.5966 0.151519 13.6758 0.236453 13.7283 0.337647C13.7807 0.439133 13.8031 0.553448 13.7929 0.667208C13.7826 0.780968 13.7402 0.889466 13.6706 0.98L9.26472 7V13.3824C9.26259 13.5455 9.19683 13.7014 9.08146 13.8167C8.96609 13.9321 8.81022 13.9979 8.64708 14ZM5.97061 12.7647H8.02943V6.79412C8.02878 6.66289 8.07229 6.53527 8.15296 6.43177L11.9412 1.23529H2.05884L5.86355 6.43177C5.94422 6.53527 5.98773 6.66289 5.98708 6.79412L5.97061 12.7647Z"
                              fill="currentColor"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </th>
                  <th
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="false"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 10%;"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Name
                      </span>
                    </div>
                  </th>
                  <th
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="false"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 10%;"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Role
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
                data-pc-section="tbody"
                role=" rowgroup"
              >
                <tr
                  class="p-datatable-emptymessage"
                  data-pc-section="emptymessage"
                  role="row"
                >
                  <td
                    colspan="3"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                  >
                    No results found
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="align-items: center; flex-direction: column; display: flex;"
    >
      <div
        class="p-datatable p-component p-datatable-scrollable p-datatable-responsive-scroll"
        data-pc-name="datatable"
        data-pc-section="root"
        data-scrollselectors=".p-datatable-wrapper"
        data-showgridlines="false"
        data-testid="tableTest"
        pr_id_2=""
      >
        <div
          class="p-datatable-wrapper"
          data-pc-section="wrapper"
          style="overflow: auto;"
        >
          <table
            class="p-datatable-table p-datatable-scrollable-table"
            data-pc-section="table"
            role="table"
            style="min-width: 70rem; max-width: 100rem;"
          >
            <thead
              class="p-datatable-thead"
              data-pc-name="datatable"
              data-pc-section="thead"
              role="rowgroup"
            >
              <tr
                data-pc-section="headerrow"
                role="row"
              >
                <th
                  aria-sort="none"
                  class="p-sortable-column"
                  data-p-filter-column="false"
                  data-p-frozen-column="false"
                  data-p-reorderable-column="false"
                  data-p-resizable-column="false"
                  data-p-sortable-column="true"
                  data-pc-name="datatable"
                  data-pc-section="headercell"
                  role="columnheader"
                  style="width: 10%;"
                  tabindex="0"
                >
                  <div
                    class="p-column-header-content"
                    data-pc-section="headercontent"
                  >
                    <span
                      class="p-column-title"
                      data-pc-section="headertitle"
                    >
                      Course
                    </span>
                    <span
                      data-pc-section="sort"
                    >
                      <svg
                        aria-hidden="true"
                        class="p-icon p-sortable-column-icon"
                        data-pc-section="sorticon"
                        fill="none"
                        height="14"
                        viewBox="0 0 14 14"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                          fill="currentColor"
                        />
                        <path
                          d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                          fill="currentColor"
                        />
                        <path
                          d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                          fill="currentColor"
                        />
                        <path
                          d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <div
                      class="p-column-filter p-fluid p-column-filter-menu"
                      data-pc-section="columnfilter"
                    >
                      <button
                        aria-controls="pr_id_1"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Show Filter Menu"
                        class="p-column-filter-menu-button p-link"
                        data-pc-section="filtermenubutton"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="p-icon"
                          data-pc-section="filtericon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.64708 14H5.35296C5.18981 13.9979 5.03395 13.9321 4.91858 13.8167C4.8032 13.7014 4.73745 13.5455 4.73531 13.3824V7L0.329431 0.98C0.259794 0.889466 0.217389 0.780968 0.20718 0.667208C0.19697 0.553448 0.219379 0.439133 0.271783 0.337647C0.324282 0.236453 0.403423 0.151519 0.500663 0.0920138C0.597903 0.0325088 0.709548 0.000692754 0.823548 0H13.1765C13.2905 0.000692754 13.4021 0.0325088 13.4994 0.0920138C13.5966 0.151519 13.6758 0.236453 13.7283 0.337647C13.7807 0.439133 13.8031 0.553448 13.7929 0.667208C13.7826 0.780968 13.7402 0.889466 13.6706 0.98L9.26472 7V13.3824C9.26259 13.5455 9.19683 13.7014 9.08146 13.8167C8.96609 13.9321 8.81022 13.9979 8.64708 14ZM5.97061 12.7647H8.02943V6.79412C8.02878 6.66289 8.07229 6.53527 8.15296 6.43177L11.9412 1.23529H2.05884L5.86355 6.43177C5.94422 6.53527 5.98773 6.66289 5.98708 6.79412L5.97061 12.7647Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </th>
                <th
                  data-p-filter-column="false"
                  data-p-frozen-column="false"
                  data-p-reorderable-column="false"
                  data-p-resizable-column="false"
                  data-p-sortable-column="false"
                  data-pc-name="datatable"
                  data-pc-section="headercell"
                  role="columnheader"
                  style="width: 10%;"
                >
                  <div
                    class="p-column-header-content"
                    data-pc-section="headercontent"
                  >
                    <span
                      class="p-column-title"
                      data-pc-section="headertitle"
                    >
                      Name
                    </span>
                  </div>
                </th>
                <th
                  data-p-filter-column="false"
                  data-p-frozen-column="false"
                  data-p-reorderable-column="false"
                  data-p-resizable-column="false"
                  data-p-sortable-column="false"
                  data-pc-name="datatable"
                  data-pc-section="headercell"
                  role="columnheader"
                  style="width: 10%;"
                >
                  <div
                    class="p-column-header-content"
                    data-pc-section="headercontent"
                  >
                    <span
                      class="p-column-title"
                      data-pc-section="headertitle"
                    >
                      Role
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              class="p-datatable-tbody"
              data-pc-section="tbody"
              role=" rowgroup"
            >
              <tr
                class="p-datatable-emptymessage"
                data-pc-section="emptymessage"
                role="row"
              >
                <td
                  colspan="3"
                  data-pc-name="datatable"
                  data-pc-section="bodycell"
                  role="cell"
                >
                  No results found
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentAnnotationsPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
          <button>
            Search Assignment
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Annotations:
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
        <button>
          Search Assignment
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Annotations:
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentGradesPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
          <button>
            Search Assignment
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Grades:
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
        <button>
          Search Assignment
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Grades:
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches AssignmentReportsPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              style="margin: 0px 1rem 0px 0px;"
              type="text"
            />
          </label>
          <label>
             Enter the assignment id:
            <input
              placeholder="Assignment Id Here"
              type="text"
            />
          </label>
        </div>
        <span />
        <div>
          <label>
             Select the report type:
            <div
              class="w-full md:w-14rem p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
              data-p-disabled="false"
              data-p-focus="false"
              data-pc-name="dropdown"
              data-pc-section="root"
              data-testid="dropTest"
              id="reportTypeDropdown"
            >
              <div
                class="p-hidden-accessible"
                data-pc-section="hiddenselectedmessage"
              >
                <input
                  aria-haspopup="listbox"
                  data-pc-section="input"
                  readonly=""
                  tabindex="0"
                  type="text"
                />
              </div>
              <div
                class="p-hidden-accessible p-dropdown-hidden-select"
                data-pc-section="hiddenselectedmessage"
              >
                <select
                  aria-hidden="true"
                  data-pc-section="select"
                  tabindex="-1"
                >
                  <option
                    data-pc-section="option"
                    selected=""
                    value="pageViews"
                  >
                    pageViews
                  </option>
                </select>
              </div>
              <span
                class="p-dropdown-label p-inputtext"
                data-pc-section="input"
                tabindex="-1"
              >
                pageViews
              </span>
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Select a report"
                class="p-dropdown-trigger"
                data-pc-section="trigger"
                role="button"
              >
                <svg
                  aria-hidden="true"
                  class="p-icon p-dropdown-trigger-icon p-clickable"
                  data-pc-section="dropdownicon"
                  data-pr-overlay-visible="false"
                  fill="none"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            style="margin: 0px 0px 0px 1rem;"
          >
             Enter the report page:
            <input
              placeholder="Report Page Here"
              type="text"
            />
          </label>
        </div>
        <label>
          Current report type: 
          pageViews
        </label>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignment Analytics:
        </h1>
        <label>
          No page analytics to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            style="margin: 0px 1rem 0px 0px;"
            type="text"
          />
        </label>
        <label>
           Enter the assignment id:
          <input
            placeholder="Assignment Id Here"
            type="text"
          />
        </label>
      </div>
      <span />
      <div>
        <label>
           Select the report type:
          <div
            class="w-full md:w-14rem p-dropdown p-component p-inputwrapper p-inputwrapper-filled"
            data-p-disabled="false"
            data-p-focus="false"
            data-pc-name="dropdown"
            data-pc-section="root"
            data-testid="dropTest"
            id="reportTypeDropdown"
          >
            <div
              class="p-hidden-accessible"
              data-pc-section="hiddenselectedmessage"
            >
              <input
                aria-haspopup="listbox"
                data-pc-section="input"
                readonly=""
                tabindex="0"
                type="text"
              />
            </div>
            <div
              class="p-hidden-accessible p-dropdown-hidden-select"
              data-pc-section="hiddenselectedmessage"
            >
              <select
                aria-hidden="true"
                data-pc-section="select"
                tabindex="-1"
              >
                <option
                  data-pc-section="option"
                  selected=""
                  value="pageViews"
                >
                  pageViews
                </option>
              </select>
            </div>
            <span
              class="p-dropdown-label p-inputtext"
              data-pc-section="input"
              tabindex="-1"
            >
              pageViews
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-label="Select a report"
              class="p-dropdown-trigger"
              data-pc-section="trigger"
              role="button"
            >
              <svg
                aria-hidden="true"
                class="p-icon p-dropdown-trigger-icon p-clickable"
                data-pc-section="dropdownicon"
                data-pr-overlay-visible="false"
                fill="none"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.01744 10.398C6.91269 10.3985 6.8089 10.378 6.71215 10.3379C6.61541 10.2977 6.52766 10.2386 6.45405 10.1641L1.13907 4.84913C1.03306 4.69404 0.985221 4.5065 1.00399 4.31958C1.02276 4.13266 1.10693 3.95838 1.24166 3.82747C1.37639 3.69655 1.55301 3.61742 1.74039 3.60402C1.92777 3.59062 2.11386 3.64382 2.26584 3.75424L7.01744 8.47394L11.769 3.75424C11.9189 3.65709 12.097 3.61306 12.2748 3.62921C12.4527 3.64535 12.6199 3.72073 12.7498 3.84328C12.8797 3.96582 12.9647 4.12842 12.9912 4.30502C13.0177 4.48162 12.9841 4.662 12.8958 4.81724L7.58083 10.1322C7.50996 10.2125 7.42344 10.2775 7.32656 10.3232C7.22968 10.3689 7.12449 10.3944 7.01744 10.398Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </label>
        <label
          style="margin: 0px 0px 0px 1rem;"
        >
           Enter the report page:
          <input
            placeholder="Report Page Here"
            type="text"
          />
        </label>
      </div>
      <label>
        Current report type: 
        pageViews
      </label>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignment Analytics:
      </h1>
      <label>
        No page analytics to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches CourseAssignmentPage Snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="display: flex; flex-direction: column; align-items: center;"
      >
        <div>
          <label>
             Enter the course id:
            <input
              placeholder="Course Id Here"
              type="text"
            />
          </label>
          <button>
            Search Course
          </button>
        </div>
        <h1
          style="border-bottom: 1px solid black; display: inline-block;"
        >
          Assignments (From Perusall):
        </h1>
        <label>
          No assignments to display
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="display: flex; flex-direction: column; align-items: center;"
    >
      <div>
        <label>
           Enter the course id:
          <input
            placeholder="Course Id Here"
            type="text"
          />
        </label>
        <button>
          Search Course
        </button>
      </div>
      <h1
        style="border-bottom: 1px solid black; display: inline-block;"
      >
        Assignments (From Perusall):
      </h1>
      <label>
        No assignments to display
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <label>
     Enter the course id:
    <input
      onChange={[Function]}
      placeholder="Course Id Here"
      type="text"
    />
  </label>
  <button
    onClick={[Function]}
  >
    Search Course
  </button>
  <h1>
    Perusall API Course Return:
  </h1>
  <h2>
    Course Name: 
  </h2>
  <li>
    ID: 
  </li>
  <li>
    No instructor IDs available
  </li>
  <li>
    No student IDs available
  </li>
</div>
`;

exports[`Jest Snapshot testing suite Matches DOM Snapshot 2`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div>
    <label>
      Loading data
    </label>
  </div>
</div>
`;
